--- a/app/javascript/styles/mods/announcements.scss
+++ b/app/javascript/styles/mods/announcements.scss
@@ -1,6 +1,6 @@
 @import '../mastodon/variables';
 
-.announcements__item {
+.mikutter__announcements__item {
   display: flex;
   padding: 10px;
   margin: 10px;
@@ -16,11 +16,11 @@
   }
 }
 
-.announcements__body {
+.mikutter__announcements__body {
   flex: 1 1 auto;
 }
 
-.announcements__icon {
+.mikutter__announcements__icon {
   flex: 0 0 auto;
   height: 40px;
   width: 40px;
